# Optimal-Treatment

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
Py_Programming/: RandomFeature_zx.py  Untitled.ipynb  finance_data.py  haha.py  haha1.py  model4.py  model5.py  model7.py
R Codes/: TEST_Emp_Welfare_Spline_SieveVar_Notrim.R  TEST_Thm1_1D_Spline_SieveVar.R  TEST_Thm1_2D_Spline_PlugIn.R  TEST_Thm1_2D_Spline_SieveVar.R  TEST_Thm2_1D_Spline_PlugIn.R  TEST_Thm2_1D_Spline_SieveVar.R  TEST_Thm2_2D_GAM_PlugIn.R  TEST_Thm2_2D_Spline_PlugIn.R
R Codes/Code/: .Rapp.history  .Rhistory  CHANGES_2026-06-10.md  TEST_DML_1D_Spline.R  TEST_Emp_Value_Spline_SieveVar_NoTrim.R  TEST_Emp_Value_Spline_SieveVar_Trim.R  TEST_Emp_Welfare_Spline_PlugIn.R  TEST_Emp_Welfare_Spline_SieveVar_Trim.R  TEST_Thm1_1D_GAM_PlugIn.R  TEST_Thm1_1D_Spline_PlugIn.R  TEST_Thm1_2D_GAM_PlugIn.R  TEST_Thm1_2D_Spline_PlugIn.R  TEST_Thm2_1D_GAM_PlugIn.R  TEST_Thm2_2D_GAM_PlugIn.R  TEST_Thm2_2D_Spline_PlugIn.R  TEST_Thm2_2D_Spline_SieveVar.R  TEST_Thm3_Spline_SieveVar.R  readme.docx  readme.pages  sim_results_DML_1D_Spline.Rdata  sim_results_Thm1_1D.Rdata  sim_results_Thm1_1D_GAM.Rdata  sim_results_Thm1_1D_SieveVar.Rdata  sim_results_Thm1_2D_GAM.Rdata  sim_results_Thm1_2D_SieveVar.Rdata  sim_results_Thm4.Rdata
opttreat/: README.md  __init__.py  config.py  data.py  sobol.py
opttreat/empirical/: KT_Data1.csv  __init__.py  run_empirical.py
opttreat/estimation/: __init__.py  base.py  dml_sieve.py  rf_ridge.py  sieve.py
opttreat/models/: MODEL_SPECIFICATIONS.md  __init__.py  ccg_model.py  (+3 more)
(+91 files in other folders)
