[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opttreat"
version = "0.1.0"
description = "Inference for optimal treatment welfare and value functionals after Chen, Chen, and Gao (2025)."
readme = "opttreat/README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "tabulate",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["opttreat*"]
